[package]
name = "aarch64-bare-metal"
version = "0.1.0"
authors = ["able <abl3theabove@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.4.0"

[dependencies.aes-gcm-siv]
version="*"
default-features = false
features = ["heapless", "aes"]
